package Proyecto;
import lombok.Getter;
import lombok.ToString;
@Getter @ToString
public enum Estado {
    DISPONIBLE, OCUPADO
}
