@startuml
  ' Enumerados
  enum TipoUsuario {
    ARTISTA
    VISITANTE
    ORGANIZADOR
  }

  enum Estado {
    DISPONIBLE
    OCUPADO
  }

  enum Entradas {
    GENERAL
    VIP
    FAMILIAR
    GRUPO
    + int precio
  }

  enum TipoPago {
    PAYPAL
    TARJETA
    BIZUM
    + double comision
  }

  ' Clases principales
  class Usuario {
    # int id
    # String nombre
    # String correo
    # int telefono
    # String contraseña
    # TipoUsuario tipoUsuario
    + generarID()
    + autenticarCorreo()
    + autenticarTelefono()
  }

  class Artista {
    - String biografia
    - List<Obra> obras
    - Stand standAsignado
    + agregarObra()
    + eliminarObra()
    + filtroTecnica()
    + filtroAño()
    + filtroPrecioDescendente()
  }

  class Organizador {
    - String rol
    - List<Feria> feriasOrganizadas
    + agregarFeria()
    + eliminarFeria()
  }

  class Visitante {
    - Entradas tipoEntrada
    - List<Venta> compras
    - Feria feriaAsistida
    - double precioTicket
    + comprarEntrada()
    + Ticket()
    + procesarPago()
    + notificarArtista()
  }

  class Feria {
    - int feriaId
    - String nombre
    - String ubicacion
    - LocalDate fechaInicio
    - LocalDate fechaFin
    - List<Stand> stands
    - List<Usuario> listaUsuarios
    - Organizador responsable
    + generarID()
    + agregarStand()
    + eliminarStand()
    + reservarStand()
    + liberarStand()
    + asignarUsuario()
    + retirarUsuario()
  }

  class Stand {
    - int standId
    - int numero
    - Estado estado
    - Feria feria
    - Artista artistaAsignado
    + generarID()
    + {static} obtenerStandDisponible()
  }

  class Obra {
    - int obraId
    - String titulo
    - int añoCreacion
    - String tecnica
    - double precio
    - Artista artista
    + generarID()
  }

  class Venta {
    - int ventaId
    - LocalDate fechaVenta
    - Obra obra
    - Visitante comprador
    + generarID()
  }

  class Notificaciones {
    + {static} enviarEmail()
    + {static} notificarVenta()
  }

  ' Relaciones de herencia
  Usuario <|-- Artista
  Usuario <|-- Organizador
  Usuario <|-- Visitante

  ' Asociaciones
  Usuario -- TipoUsuario

  Artista -- Obra : crea >
  Artista -- Stand : se le asigna >

  Organizador -- Feria : organiza >

  Visitante -- Entradas
  Visitante -- Venta : realiza >
  Visitante - Feria : asiste >
  Visitante ..> TipoPago : usa >

  Feria -- Stand : contiene >
  Feria -- Usuario : tiene >
  Feria - Organizador : tiene responsable >

  Stand -- Estado
  Stand - Feria : pertenece >
  Stand -- Artista : es asignado >

  Obra - Artista : pertenece >

  Venta - Obra : incluye >
  Venta - Visitante : es realizada >

  Notificaciones ..> Usuario : notifica >

  @enduml